# nim-glfm

./: README.md
examples/: CMakeLists.txt  build_android.sh  file_compat.h  main.nim  nimbase.h
examples/android_triangle/: local.properties
examples/android_triangle/app/: build.gradle
examples/android_triangle/app/src/main/: AndroidManifest.xml
examples/android_triangle/app/src/main/cpp/: @m..@s..@s..@s..@s..@s..@s..@s.choosenim@stoolchains@snim-2.0.8@slib@sstd@sformatfloat.nim.c  @m..@s..@s..@s..@s..@s..@s..@s.choosenim@stoolchains@snim-2.0.8@slib@sstd@sprivate@sdigitsutils.nim.c  @m..@s..@s..@s..@s..@s..@s..@s.choosenim@stoolchains@snim-2.0.8@slib@sstd@sprivate@sthreadtypes.nim.c  @m..@s..@s..@s..@s..@s..@s..@s.choosenim@stoolchains@snim-2.0.8@slib@ssystem.nim.c  @m..@s..@s..@s..@s..@s..@s..@s.choosenim@stoolchains@snim-2.0.8@slib@ssystem@sdollars.nim.c  @m..@s..@s..@s..@s..@s..@s..@s.nimble@spkgs2@sopengl-1.2.9-87ece9f3a9f99d17332b50885e15a4dcb18c51b5@sopengl.nim.c  @mmain.nim.c  main.json  nimbase.h
